2008-12-09  Pedro Fragoso  <ember@ubuntu.com>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* gdl/gdl-combo-button.h:
	* gdl/gdl-dock-bar.h:
	* gdl/gdl-dock-item-grip.c:
	* gdl/gdl-dock-item-grip.h:
	* gdl/gdl-dock-master.h:
	* gdl/gdl-dock-object.h:
	* gdl/gdl-dock-paned.c:
	* gdl/gdl-stock.c:
	* gdl/gdl-switcher.c:
	* gdl/gdl-switcher.h:
	* gdl/gdl-tools.h:
	GNOME Goal: Clean up GLib and GTK+ includes (Closes: #563902)

=== gdl 2.24.0 ===

2008-09-22  Johannes Schmid  <jhs@gnome.org>

	* configure.in Bumped version
	* NEWS: updated

2008-09-02  Christian Persch <chpe@gnome.org>

	* gdl-1.0.pc.in:
	#546938 – datarootdir problem

2008-09-02  Johannes Schmid  <jhs@gnome.org>

	* Makefile.am:
	* configure.in:
	* docs/reference/gdl-sections.txt:
	* docs/reference/gdl.types:
	* gdl-gnome-1.0.pc.in:
	* gdl/Makefile.am:
	* gdl/gdl-data-frame.c:
	* gdl/gdl-data-frame.h:
	* gdl/gdl-data-model-test.c:
	* gdl/gdl-data-model-test.h:
	* gdl/gdl-data-model.c:
	* gdl/gdl-data-model.h:
	* gdl/gdl-data-row.c:
	* gdl/gdl-data-row.h:
	* gdl/gdl-data-view.c:
	* gdl/gdl-data-view.h:
	* gdl/test-dataview.c:
	Removed old and unused API and thus fixed
	#513845 – Port gdl to gio

=== gdl 2.23.90 ===

2008-08-18  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumpped version to 2.23.90
	* NEWS: Updated for a release.
	
2008-06-20  Christian Persch  <chpe@gnome.org>

	* gdl/gdl-dock-layout.c: (gdl_dock_layout_construct_layouts_ui): Also
	replace GTK_SIGNAL_FUNC.

2008-06-20  Christian Persch  <chpe@gnome.org>

	* gdl/gdl-data-frame.h:
	* gdl/gdl-data-view.h:
	* gdl/gdl-dock-bar.h:
	* gdl/gdl-dock-item-grip.c:
	* gdl/gdl-dock-item-grip.h:
	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-item.h:
	* gdl/gdl-dock-layout.h:
	* gdl/gdl-dock-master.h:
	* gdl/gdl-dock-notebook.h:
	* gdl/gdl-dock-object.h:
	* gdl/gdl-dock-paned.h:
	* gdl/gdl-dock-placeholder.h:
	* gdl/gdl-dock-tablabel.h:
	* gdl/gdl-dock.c:
	* gdl/gdl-dock.h: Use gtype macros instead of the deprecated gtk ones.
	Bug #539288.
