@@ -238,6 +238,16 @@ gdl_dock_item_class_init (GdlDockItemClass *klass)
 
     /* properties */
 
+    /**
+     * GdlDockItem:orientation:
+     *
+     * The orientation of the docking item. If the orientation is set to
+     * #GTK_ORIENTATION_VERTICAL, the grip widget will be shown along
+     * the top of the edge of item (if it is not hidden). If the
+     * orientation is set to #GTK_ORIENTATION_HORIZONTAL, the grip
+     * widget will be shown down the left edge of the item (even if the
+     * widget text direction is set to RTL).
+     */
     g_object_class_install_property (
         g_object_class, PROP_ORIENTATION,
         g_param_spec_enum ("orientation", _("Orientation"),
@@ -296,6 +306,12 @@ gdl_dock_item_class_init (GdlDockItemClass *klass)
 
     /* signals */
     
+    /**
+     * GdlDockItem::dock-drag-begin:
+     * @item: The dock item which is being dragged.
+     * 
+     * Signals that the dock item has begun to be dragged.
+     **/
     gdl_dock_item_signals [DOCK_DRAG_BEGIN] = 
         g_signal_new ("dock-drag-begin",
                       G_TYPE_FROM_CLASS (klass),
@@ -306,7 +322,15 @@ gdl_dock_item_class_init (GdlDockItemClass *klass)
                       gdl_marshal_VOID__VOID,
                       G_TYPE_NONE, 
                       0);
-
+    
+    /**
+     * GdlDockItem::dock-drag-motion:
+     * @item: The dock item which is being dragged.
+     * @x: The x-position that the dock item has been dragged to.
+     * @y: The y-position that the dock item has been dragged to.
+     * 
+     * Signals that a dock item dragging motion event has occured.
+     **/
     gdl_dock_item_signals [DOCK_DRAG_MOTION] = 
         g_signal_new ("dock-drag-motion",
                       G_TYPE_FROM_CLASS (klass),
@@ -320,6 +344,14 @@ gdl_dock_item_class_init (GdlDockItemClass *klass)
                       G_TYPE_INT,
                       G_TYPE_INT);
 
+    /**
+     * GdlDockItem::dock-drag-end:
+     * @item: The dock item which is no longer being dragged.
+     * @cancel: This value is set to TRUE if the drag was cancelled by
+     * the user. #cancel is set to FALSE if the drag was accepted.
+     * 
+     * Signals that the dock item dragging has ended.
+     **/
     gdl_dock_item_signals [DOCK_DRAG_END] = 
         g_signal_new ("dock_drag_end",
                       G_TYPE_FROM_CLASS (klass),
@@ -1551,6 +1583,17 @@ gdl_dock_item_real_set_orientation (GdlDockItem    *item,
 
 /* ----- Public interface ----- */
 
+/**
+ * gdl_dock_item_new:
+ * @name: Unique name for identifying the dock object.
+ * @long_name: Human readable name for the dock object.
+ * @behavior: General behavior for the dock item (i.e. whether it can
+ *            float, if it's locked, etc.), as specified by
+ *            #GdlDockItemBehavior flags.
+ * 
+ * Creates a new dock item widget.
+ * Returns: The newly created dock item grip widget.
+ **/
 GtkWidget *
 gdl_dock_item_new (const gchar         *name,
                    const gchar         *long_name,
@@ -1569,6 +1612,18 @@ gdl_dock_item_new (const gchar         *name,
     return GTK_WIDGET (item);
 }
 
+/**
+ * gdl_dock_item_new_with_stock:
+ * @name: Unique name for identifying the dock object.
+ * @long_name: Human readable name for the dock object.
+ * @stock_id: Stock icon for the dock object.
+ * @behavior: General behavior for the dock item (i.e. whether it can
+ *            float, if it's locked, etc.), as specified by
+ *            #GdlDockItemBehavior flags.
+ * 
+ * Creates a new dock item grip widget with a given stock id.
+ * Returns: The newly created dock item grip widget.
+ **/
 GtkWidget *
 gdl_dock_item_new_with_stock (const gchar         *name,
                               const gchar         *long_name,
@@ -1590,6 +1645,15 @@ gdl_dock_item_new_with_stock (const gchar         *name,
 }
 
 /* convenient function (and to preserve source compat) */
+/**
+ * gdl_dock_item_dock_to:
+ * @item: The dock item that will be relocated to the dock position.
+ * @target: The dock item that will be used as the point of reference.
+ * @position: The position to dock #item, relative to #target.
+ * @docking_param: This value is unused, and will be ignored.
+ * 
+ * Relocates a dock item to a new location relative to another dock item.
+ **/
 void
 gdl_dock_item_dock_to (GdlDockItem      *item,
                        GdlDockItem      *target,
@@ -1625,6 +1689,18 @@ gdl_dock_item_dock_to (GdlDockItem      *item,
                               position, NULL);
 }
 
+/**
+ * gdl_dock_item_set_orientation:
+ * @item: The dock item which will get it's orientation set.
+ * @orientation: The orientation to set the item to. If the orientation
+ * is set to #GTK_ORIENTATION_VERTICAL, the grip widget will be shown
+ * along the top of the edge of item (if it is not hidden). If the
+ * orientation is set to #GTK_ORIENTATION_HORIZONTAL, the grip widget
+ * will be shown down the left edge of the item (even if the widget
+ * text direction is set to RTL).
+ * 
+ * This function sets the layout of the dock item.
+ **/
 void
 gdl_dock_item_set_orientation (GdlDockItem    *item,
                                GtkOrientation  orientation)
@@ -1649,6 +1725,16 @@ gdl_dock_item_set_orientation (GdlDockItem    *item,
     }
 }
 
+/**
+ * gdl_dock_item_get_tablabel:
+ * @item: The dock item from which to get the tab label widget.
+ * 
+ * Gets the current tab label widget. Note that this label widget is
+ * only visible when the "switcher-style" property of the #GdlDockMaster
+ * is set to #GDL_SWITCHER_STYLE_TABS
+ * 
+ * Returns: Returns the tab label widget.
+ **/
 GtkWidget *
 gdl_dock_item_get_tablabel (GdlDockItem *item)
 {
@@ -1658,6 +1744,15 @@ gdl_dock_item_get_tablabel (GdlDockItem *item)
     return item->_priv->tab_label;
 }
 
+/**
+ * gdl_dock_item_set_tablabel:
+ * @item: The dock item which will get it's tab label widget set.
+ * @tablabel: The widget that will become the tab label.
+ * 
+ * Replaces the current tab label widget with another widget. Note that
+ * this label widget is only visible when the "switcher-style" property
+ * of the #GdlDockMaster is set to #GDL_SWITCHER_STYLE_TABS
+ **/
 void
 gdl_dock_item_set_tablabel (GdlDockItem *item,
                             GtkWidget   *tablabel)
@@ -1690,6 +1785,12 @@ gdl_dock_item_set_tablabel (GdlDockItem *item,
     }
 }
 
+/**
+ * gdl_dock_item_hide_grip:
+ * @item: The dock item to hide the grip of.
+ * 
+ * This function hides the dock item's grip widget.
+ **/
 void 
 gdl_dock_item_hide_grip (GdlDockItem *item)
 {
@@ -1701,6 +1802,12 @@ gdl_dock_item_hide_grip (GdlDockItem *item)
     g_warning ("Grips always show unless GDL_DOCK_ITEM_BEH_NO_GRIP is set\n" );
 }
 
+/**
+ * gdl_dock_item_show_grip:
+ * @item: The dock item to show the grip of.
+ * 
+ * This function shows the dock item's grip widget.
+ **/
 void
 gdl_dock_item_show_grip (GdlDockItem *item)
 {
@@ -1712,6 +1819,14 @@ gdl_dock_item_show_grip (GdlDockItem *item)
 }
 
 /* convenient function (and to preserve source compat) */
+/**
+ * gdl_dock_item_bind:
+ * @item: The item to bind.
+ * @dock: The #GdlDock widget to bind it to. Note that this widget must
+ * be a type of #GdlDock.
+ * 
+ * Binds this dock item to a new dock master.
+ **/
 void
 gdl_dock_item_bind (GdlDockItem *item,
                     GtkWidget   *dock)
@@ -1724,6 +1839,12 @@ gdl_dock_item_bind (GdlDockItem *item,
 }
 
 /* convenient function (and to preserve source compat) */
+/**
+ * gdl_dock_item_unbind:
+ * @item: The item to unbind.
+ * 
+ * Unbinds this dock item from it's dock master.
+ **/
 void
 gdl_dock_item_unbind (GdlDockItem *item)
 {
@@ -1732,6 +1853,15 @@ gdl_dock_item_unbind (GdlDockItem *item)
     gdl_dock_object_unbind (GDL_DOCK_OBJECT (item));
 }
 
+/**
+ * gdl_dock_item_hide_item:
+ * @item: The dock item to hide.
+ * 
+ * This function hides the dock item. When dock items are hidden they
+ * are completely removed from the layout.
+ * 
+ * The dock item close button causes the panel to be hidden.
+ **/
 void
 gdl_dock_item_hide_item (GdlDockItem *item)
 {
@@ -1794,6 +1924,15 @@ gdl_dock_item_hide_item (GdlDockItem *item)
     gdl_dock_object_thaw (GDL_DOCK_OBJECT (item));
 }
 
+/**
+ * gdl_dock_item_iconify_item:
+ * @item: The dock item to iconify.
+ * 
+ * This function iconifies the dock item. When dock items are iconified
+ * they are hidden, and appear only as icons in dock bars.
+ * 
+ * The dock item iconify button causes the panel to be iconified.
+ **/
 void
 gdl_dock_item_iconify_item (GdlDockItem *item)
 {
@@ -1803,6 +1942,13 @@ gdl_dock_item_iconify_item (GdlDockItem *item)
     gdl_dock_item_hide_item (item);
 }
 
+/**
+ * gdl_dock_item_show_item:
+ * @item: The dock item to show.
+ * 
+ * This function shows the dock item. When dock items are shown, they
+ * are displayed in their normal layout position.
+ **/
 void
 gdl_dock_item_show_item (GdlDockItem *item)
 {
@@ -1854,12 +2000,26 @@ gdl_dock_item_show_item (GdlDockItem *item)
     gtk_widget_show (GTK_WIDGET (item));
 }
 
+/**
+ * gdl_dock_item_lock:
+ * @item: The dock item to lock.
+ * 
+ * This function locks the dock item. When locked the dock item cannot
+ * be dragged around and it doesn't show a grip.
+ **/
 void
 gdl_dock_item_lock (GdlDockItem *item)
 {
     g_object_set (item, "locked", TRUE, NULL);
 }
 
+/**
+ * gdl_dock_item_unlock:
+ * @item: The dock item to unlock.
+ * 
+ * This function unlocks the dock item. When unlocked the dock item can
+ * be dragged around and can show a grip.
+ **/
 void
 gdl_dock_item_unlock (GdlDockItem *item)
 {
@@ -1894,6 +2054,14 @@ gdl_dock_item_set_default_position (GdlDockItem   *item,
     }
 }
 
+/**
+ * gdl_dock_item_preferred_size:
+ * @item: The dock item to get the preferred size of.
+ * @req: A pointer to a #GtkRequisition into which the preferred size
+ * will be written.
+ * 
+ * Gets the preferred size of the dock item in pixels.
+ **/
 void 
 gdl_dock_item_preferred_size (GdlDockItem    *item,
                               GtkRequisition *req)
